# eva-public

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
app/: CMakeLists.txt  EVA_Research.cpp
job_handler/: eva_research.py  requirements.txt  runConfig.json
job_handler/data/scotland/full/10F/: chargers.csv  maintenances.csv  trips.csv  vehicles.csv
job_handler/data/scotland/full/14F/: chargers.csv  locations_distances.csv  maintenances.csv  trips.csv  vehicles.csv
job_handler/data/scotland/full/18F/: chargers.csv  maintenances.csv  trips.csv  vehicles.csv
job_handler/data/scotland/full/22F/: chargers.csv  locations.csv  maintenances.csv  trips.csv  vehicles.csv
job_handler/data/scotland/large/10F/: chargers.csv  maintenances.csv  trips.csv  vehicles.csv
job_handler/data/scotland/large/14F/: chargers.csv  locations.csv  locations_distances.csv  maintenances.csv  trips.csv  vehicles.csv
job_handler/data/scotland/large/18F/: chargers.csv  maintenances.csv  trips.csv  vehicles.csv
job_handler/data/scotland/large/22F/: chargers.csv  maintenances.csv  trips.csv  vehicles.csv
job_handler/data/scotland/medium/10F/: chargers.csv  locations.csv  maintenances.csv  trips.csv  vehicles.csv
job_handler/data/scotland/medium/14F/: chargers.csv  locations_distances.csv  maintenances.csv  trips.csv  vehicles.csv
job_handler/data/scotland/medium/18F/: chargers.csv  maintenances.csv  trips.csv  vehicles.csv
job_handler/data/scotland/medium/22F/: chargers.csv  maintenances.csv  trips.csv  vehicles.csv
job_handler/data/scotland/small/10F/: chargers.csv  maintenances.csv  trips.csv  vehicles.csv
job_handler/data/scotland/small/14F/: chargers.csv  locations.csv  maintenances.csv  trips.csv  vehicles.csv
job_handler/data/scotland/small/18F/: chargers.csv  chargers_unavailability.csv  locations_distances.csv  maintenances.csv  trips.csv  vehicles.csv
job_handler/data/scotland/small/22F/: maintenances.csv  trips.csv  vehicles.csv
job_handler/data/scotland/toy/10F/: chargers.csv  maintenances.csv  trips.csv  vehicles.csv
job_handler/data/scotland/toy/10F/instances/config_setting__3_1/outputs/: StatsChargers.csv  StatsPerformanceDetail.csv  StatsPlanningHorizon.csv  StatsSchedule.csv  StatsVehicles.csv  VS_Output.csv
job_handler/data/scotland/toy/10F/instances/config_setting__3_2/outputs/: StatsChargers.csv  StatsPerformanceDetail.csv  StatsPlanningHorizon.csv  StatsSchedule.csv  StatsVehicles.csv  VS_Output.csv
job_handler/data/scotland/toy/10F/instances/config_setting__4_2/: config.csv
job_handler/data/scotland/toy/14F/: maintenances.csv  trips.csv  vehicles.csv
job_handler/data/scotland/toy/14F/instances/config_setting__5_1/: config.csv
job_handler/data/scotland/toy/18F/: chargers.csv  locations.csv  maintenances.csv  trips.csv  vehicles.csv
job_handler/data/scotland/toy/18F/instances/config_setting__3_1/: config.csv
job_handler/data/scotland/toy/22F/: locations_distances.csv  maintenances.csv  trips.csv  vehicles.csv
job_handler/data/scotland/toy/22F/instances/config_setting__3_2/: config.csv
job_handler/data/scotland/toy/22F/instances/config_setting__4_1/: config.csv
job_handler/data/scotland/toy/22F/instances/config_setting__5_2/: config.csv
job_handler/tools/: __init__.py  dataGenerator.ipynb  visualisation.py
libs/: CMakeLists.txt
libs/evaDataHandler/: CMakeLists.txt
libs/evaDataHandler/incl/: evaDataHandler.h
libs/evaDataHandler/incl/dataInput/: dataInput.h
libs/evaDataHandler/incl/dataInput/dataStructures/: charger.h  chargers.h  config.h  location.h  locations.h  maintenance.h  maintenances.h  trip.h  trips.h  vehicle.h  vehicles.h
libs/evaDataHandler/incl/dataOutput/: dataOutput.h
libs/evaDataHandler/incl/dataStats/: stats.h
libs/evaDataHandler/incl/scheduleGraph/: scheduleArc.h  scheduleGraph.h  scheduleNode.h
libs/evaDataHandler/src/: evaDataHandler.cpp
libs/evaDataHandler/src/dataInput/: dataInput.cpp
libs/evaDataHandler/src/dataInput/dataStructures/: chargers.cpp  config.cpp  location.cpp  locations.cpp  maintenances.cpp  trips.cpp  vehicles.cpp
libs/evaDataHandler/src/dataOutput/: dataOutput.cpp
libs/evaDataHandler/src/scheduleGraph/: scheduleGraph.cpp
libs/evaGlobal/: CMakeLists.txt
libs/evaGlobal/incl/: evaConstants.h  evaConstants.tcc  evaExceptions.h
libs/evaGlobal/src/: evaConstants.cpp
libs/evaOptimiser/: CMakeLists.txt
libs/evaOptimiser/incl/: evaOptimiser.h
libs/evaOptimiser/incl/masterProblem/: masterProblem.h
libs/evaOptimiser/incl/moderator/: OptimisationInput.h  SubScheduleNodes.h  branch.h  chargingStrategies.h  moderator.h
libs/evaOptimiser/incl/pricingProblem/: pricingProblem.h
libs/evaOptimiser/incl/pricingProblem/segmentBased/centralisedNetwork/: segmentCentralisedNetwork.h  segmentCentralisedNetworkArcs.h  segmentCentralisedNetworkNodes.h
libs/evaOptimiser/incl/pricingProblem/segmentBased/connectionNetwork/: segmentConnectionNetwork.h  segmentConnectionNetworkArcs.h  segmentConnectionNetworkNodes.h
libs/evaOptimiser/incl/pricingProblem/segmentBased/segments/: segment.h  segments.h
libs/evaOptimiser/incl/pricingProblem/segmentBased/segments/subGraph/: subGraph.h  subGraphArcs.h  subGraphNodes.h
libs/evaOptimiser/incl/pricingProblem/timeSpace/: timeSpaceArcs.h  timeSpaceNetwork.h  timeSpaceNodes.h
libs/evaOptimiser/src/: evaOptimiser.cpp
libs/evaOptimiser/src/masterProblem/: masterProblem.cpp
libs/evaOptimiser/src/moderator/: OptimisationInput.cpp  chargingStrategies.cpp  moderator.cpp
libs/evaOptimiser/src/pricingProblem/: pricingProblem.cpp
libs/evaOptimiser/src/pricingProblem/segmentBased/centralisedNetwork/: segmentCentralisedNetwork.cpp
libs/evaOptimiser/src/pricingProblem/segmentBased/connectionNetwork/: segmentConnectionNetwork.cpp
libs/evaOptimiser/src/pricingProblem/segmentBased/segments/: segment.cpp  segments.cpp
libs/evaOptimiser/src/pricingProblem/segmentBased/segments/subGraph/: subGraph.cpp
libs/evaOptimiser/src/pricingProblem/timeSpace/: timeSpaceNetwork.cpp
(+137 files in other folders)
